--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <h2>Certificates</h2>
         <ul>
           <li>HackerRank — Python (Basic)</li>
-          <li>Python Full Stack Development (Course)</li>
+          <li>Python Full Stack Development (NSDC)</li>
         </ul>
 
         <h2>Contact</h2>
