--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       </section>
     </div>
 
-    <p class="footer">© <span id="yr"></span> Nandha Gopal M · Portfolio</p>
+    <p class="footer">© <span id="yr"></span> Nandha Gopal M </p>
   </div>
 
   <script>
